Description
Clicking on Browse More... in XP's MSTSC causes MSTSC to exit. The debug log shows
WARNING: calling stub DsEnumerateDomainTrustsW()
(../dll/win32/kernel32/client/except.c:387) Missing function in : netapi32.dll
(../dll/win32/kernel32/client/except.c:388) with the functionname : DsEnumerateDomainTrustsW
Documentation: https://msdn.microsoft.com/en-us/library/windows/desktop/ms675976%28v=vs.85%29.aspx
I think I can tackle this one. ![]()