[NETAPI32] DsEnumerateDomainTrustsW missing in netapi32.dll. Patch by Jared Smudde. CORE-11056 #resolve #comment Thanks a lot!

svn path=/trunk/; revision=71085